# md-for-varnish

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
go-sidecar/: convert.go  convert_test.go  go.mod  go.sum  handler_test.go  main.go
test/html/: index.html
tests/: conftest.py  test_api.py  test_convert.py
tests/fixtures/: page.html
varnish/: default.vcl
